--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 				<h3 class="copyright"><span>&copy; 2023, cestovní kancelář Baltic Travel s.r.o.</span></h3>
 			</div>
 		</footer>
+		<a href="#" class="quick-chat"><img src="./res/live-chat.png"></a>
 		<script src="./scripts/loadingScreen.js"></script>
 		<script src="./scripts/darkThemeCookies.js"></script>
 		<script src="./scripts/dropdownmenu.js"></script>
