--- a/hotels/index.html
+++ b/hotels/index.html
@@ -6,7 +6,8 @@
 <html class="light-theme" lang="cs-CZ">
 	<head>
 		<meta charset="UTF-8">
-		<meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
+		<meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+		      name="viewport">
 		<meta content="ie=edge" http-equiv="X-UA-Compatible">
 		<title>Baltic Travel - Hotely</title>
 		<base href="..">
@@ -39,7 +40,8 @@
 					<a href="./catalog.html"><span>ZÁJEZDY</span></a>
 				</li>
 				<li class="button" style="--local_dropdown_menu_top: 3;">
-					<a href="./informations.html"><span>INF</span><img src="./res/beach-ball.png" style="padding: 2px" width="25px"><span>RMACE</span></a>
+					<a href="./informations.html"><span>INF</span><img src="./res/beach-ball.png" style="padding: 2px"
+					                                                   width="25px"><span>RMACE</span></a>
 				</li>
 				<li class="button" style="--local_dropdown_menu_top: 4;">
 					<a href="./contact.html"><span>KONTAKTY</span></a>
@@ -59,16 +61,48 @@
 				</li>
 			</ul>
 		</header>
-		<main></main>
+		<main>
+			<div class="hotelContent">
+				<img style="width: 100%; height: 45px; object-fit: cover; position: absolute; z-index: -1;" src="./res/sea.jpg">
+				<ul class="hotelContentSelector">
+					<li id="selector-obecne" class="active" onclick="switchObecneInformace()">OBECNÉ INFORMACE</li>
+					<li id="selector-galerie" onclick="switchGalerie()">GALERIE</li>
+				</ul>
+				<div class="hotelData visible">
+					<h2 class="hotelData-name" style="color: #000000; width: 100%; text-align: center; margin-top: 50px;">Příprava na další pokračování...</h2>
+				</div>
+				<div class="hotelGallery invisible"></div>
+				<div class="hotelGalleryViewBlur"></div>
+				<div class="hotelGalleryView">
+					<img src="../hotels/res/left-arrow.png"/>
+					<div class="hotelGalleryView-img">
+						<img/>
+						<div class="hotelGalleryView-description">
+							<p class="hotelGalleryView-description-img-count"></p>
+							<p class="hotelGalleryView-description-text"></p>
+						</div>
+					</div>
+					<img src="../hotels/res/right-arrow.png"/>
+				</div>
+			</div>
+		</main>
 		<footer>
 			<div class="footer-layer contact-footer">
 				<ul>
-					<li><a><img src="./res/telephone.png"><div><span>INFOLINKA</span><span>+420 999 999 999</span></div></a></li>
-					<li><a><img src="./res/clock_pure.png"><div><span>PROVOZ</span><span>PO - PÁ od 8:00 - 22:00</span></div></a></li>
-					<li><a><img src="./res/email.png"><div><span>ODBĚR</span><span>NOVINEK</span></div></a></li>
+					<li><a><img src="./res/telephone.png">
+						<div><span>INFOLINKA</span><span>+420 999 999 999</span></div>
+					</a></li>
+					<li><a><img src="./res/clock_pure.png">
+						<div><span>PROVOZ</span><span>PO - PÁ od 8:00 - 22:00</span></div>
+					</a></li>
+					<li><a><img src="./res/email.png">
+						<div><span>ODBĚR</span><span>NOVINEK</span></div>
+					</a></li>
 				</ul>
 			</div>
-			<div class="footer-layer"><div class="footer-layer-padding"></div></div>
+			<div class="footer-layer">
+				<div class="footer-layer-padding"></div>
+			</div>
 			<div class="footer-layer">
 				<div class="theme-selector">
 					<button id="light-theme-selector" onclick="setTheme('light-theme');" title="Světlý motiv"><img
@@ -77,12 +111,14 @@
 							src="./res/check.svg"></button>
 				</div>
 			</div>
-			<div class="footer-layer"><div class="footer-layer-padding"></div></div>
+			<div class="footer-layer">
+				<div class="footer-layer-padding"></div>
+			</div>
 			<div class="footer-layer">
 				<h3 class="copyright"><span>&copy; 2023, cestovní kancelář Baltic Travel s.r.o.</span></h3>
 			</div>
 		</footer>
-		<a href="#" class="quick-chat"><img src="./res/live-chat.png"></a>
+		<a class="quick-chat" href="#"><img src="./res/live-chat.png"/></a>
 		<script src="./scripts/loadingScreen.js"></script>
 		<script src="./scripts/darkThemeCookies.js"></script>
 		<script src="./scripts/dropdownmenu.js"></script>
