--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<a href="./informations.html"><span>INF</span><img src="./res/beach-ball.png" style="padding: 2px" width="25px"><span>RMACE</span></a>
 				</li>
 				<li class="button" style="--local_dropdown_menu_top: 4;">
-					<a href="./contact.html"><span>KONTAKTY</span></a>
+					<a href="./contact.html"><span>O NÁS</span></a>
 				</li>
 				<li class="button-call">
 					<a href="tel:+420 999 999 999"><img src="./res/phone.png"><span>+420 999 999 999</span></a>
