--- a/hotels/index.html
+++ b/hotels/index.html
@@ -44,7 +44,7 @@
 					                                                   width="25px"><span>RMACE</span></a>
 				</li>
 				<li class="button" style="--local_dropdown_menu_top: 4;">
-					<a href="./contact.html"><span>KONTAKTY</span></a>
+					<a href="./about/index.html"><span>O NÁS</span></a>
 				</li>
 				<li class="button-call">
 					<a href="tel:+420 999 999 999"><img src="./res/phone.png"><span>+420 999 999 999</span></a>
