--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<ul>
 					<li><a><img src="./res/telephone.png"><div><span>INFOLINKA</span><span>+420 999 999 999</span></div></a></li>
 					<li><a><img src="./res/clock_pure.png"><div><span>PROVOZ</span><span>PO - PÁ od 8:00 - 22:00</span></div></a></li>
-					<li><a><img src="./res/email.png"><div><span>ODBĚR</span><span>NOVINEK</span></div></a></li>
+					<li><a href="/subscribe-new.php"><img src="./res/email.png"><div><span>ODBĚR</span><span>NOVINEK</span></div></a></li>
 				</ul>
 			</div>
 			<div class="footer-layer"><div class="footer-layer-padding"></div></div>
