About-Message-Update

--- a/about/index.html
+++ b/about/index.html
@@ -67,21 +67,19 @@
 			</div>
 			<div class="contact-about">
 				<p>
-					Vítejte v naší cestovní kanceláři! Jsme založenou společností, která se specializuje na pořádání cest a dovolených pro naše klienty. Od našeho založení jsme se soustředili na to, abychom poskytovali zákazníkům ty nejlepší zážitky z jejich cest, a snažili se zajistit, aby si u nás užili nezapomenutelný dovolenkový zážitek.<br><br>
+					Jsme specializovanou cestovní kanceláří, která vám nabízí široký výběr ubytování za velmi přijatelné ceny.<br><br>
 
-					Naše tým je složen z vášnivých cestovatelů, kteří mají roky zkušeností v oblasti cestování. Věříme, že právě tato zkušenost a naše touha po dobrodružství nás odlišuje od ostatních cestovních kanceláří. V naší firmě jsme se také rozhodli, že se budeme soustředit na menší skupiny cestujících, aby jsme mohli poskytovat více personalizovaný a intenzivní zážitek našim klientům.<br><br>
-					
-					Jsme pyšní na naši schopnost poskytovat kvalitní služby našim klientům, ať už se jedná o výběr nejlepších destinací, ubytování, transport nebo zajištění průvodce, kteří vám pomohou s poznáním místní kultury a historie. Navíc se snažíme o to, aby naše ceny byly přístupné pro všechny, takže si můžete být jisti, že u nás dostanete vynikající hodnotu za své peníze.<br><br>
-					
-					Děkujeme, že jste si vybrali naši cestovní kancelář jako svého partnera pro cestování. Těšíme se na to, že vám pomůžeme plánovat vaše nezapomenutelné dovolenkové zážitky!</p>
-			</div>
+Můžete si vybrat z ubytování v historických městech jako Krakov, Vratislav nebo Gdaňsk, nebo v přírodě v Tatrách, Beskydech nebo Bieszczadech. Naše ubytování jsou pečlivě vybírána a vybavena vším, co potřebujete pro příjemný pobyt. Máme pro vás k dispozici jak hotely, tak i apartmány a penziony.<br><br>
+
+V Polsku vás čeká mnoho aktivit, které si můžete užít, jako například turistiku, cyklistiku, rafting a horolezectví. Pokud hledáte romantiku, můžeme vám nabídnout pobyt v romantických hradních zámcích nebo ve venkovských domech.
+				</p>
 			<div class="page-layer-vertical page-layer-label">
 				<h4>Zaměstnanci</h4>
 			</div>
 			<div class="contact-profiles">
 				<div class="contact-profile">
 					<img src="./about/res/face-1.jpg" alt="" class="contact-profile-user-image">
-					<h5 class="contact-profile-user-name">Ondřej Přizdichcal</h5>
+					<h5 class="contact-profile-user-name">Ondřej Dvorník</h5>
 					<h5 class="contact-profile-user-work-position">Hlavní Programátor</h5>
 					<div class="contact-profile-user-socials">
 						<a target="_blank" href="https://www.instagram.com/########" class="contact-profile-user-social"><img src="./about/res/instagram.png" alt="Instagram logo"></a>
@@ -117,7 +115,7 @@
 				</div>
 				<div class="contact-profile">
 					<img src="./about/res/face-5.jpg" alt="" class="contact-profile-user-image">
-					<h5 class="contact-profile-user-name">Tomáš Upiçi</h5>
+					<h5 class="contact-profile-user-name">Tomáš Doležal</h5>
 					<h5 class="contact-profile-user-work-position">Kontrolor hotelů</h5>
 					<div class="contact-profile-user-socials">
 						<a target="_blank" href="https://www.instagram.com/palovsky_d/" class="contact-profile-user-social"><img src="./about/res/instagram.png" alt="Instagram logo"></a>
