--- a/about/index.html
+++ b/about/index.html
@@ -152,28 +152,42 @@ V Polsku vás čeká mnoho aktivit, které si můžete užít, jako například 
 			</div>
 			<div class="contact-layer">
 				<form class="contact-form" action="./sendMessage/index.php">
-					<h6 class="contact-form-label">Kontaktujte nás</h6>
-					<div class="contact-form-content">
-						<div class="contact-form-layer">
-							<h6 class="contact-form-input-name">Jméno a příjmení</h6>
-							<input name="name" type="text" required="true" class="contact-form-input">
-						</div>
-						<div class="contact-form-layer">
-							<h6 class="contact-form-input-name">E-mail</h6>
-							<input name="email" type="email" required="true" class="contact-form-input">
-						</div>
-						<div class="contact-form-layer">
-							<h6 class="contact-form-input-name">Tel. číslo</h6>
-							<input name="telephone" type="tel" required="true" class="contact-form-input">
-						</div>
-						<div class="contact-form-layer">
-							<h6 class="contact-form-input-name">Zpráva</h6>
-							<textarea name="msg" rows="5" required="true" class="contact-form-input-large"></textarea>
-						</div>
-					</div>
-					<div class="contact-form-submit">
-						<input type="submit" value="Odeslat" class="contact-submit">
-					</div>
+					<table>
+						<tr>
+							<td>
+								<h6 class="contact-form-label">Kontaktujte nás</h6>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div class="contact-form-content">
+									<div class="contact-form-layer">
+										<h6 class="contact-form-input-name">Jméno a příjmení</h6>
+										<input name="name" type="text" required="true" class="contact-form-input">
+									</div>
+									<div class="contact-form-layer">
+										<h6 class="contact-form-input-name">E-mail</h6>
+										<input name="email" type="email" required="true" class="contact-form-input">
+									</div>
+									<div class="contact-form-layer">
+										<h6 class="contact-form-input-name">Tel. číslo</h6>
+										<input name="telephone" type="tel" required="true" class="contact-form-input">
+									</div>
+									<div class="contact-form-layer">
+										<h6 class="contact-form-input-name">Zpráva</h6>
+										<textarea name="msg" rows="5" required="true" class="contact-form-input-large"></textarea>
+									</div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div class="contact-form-submit">
+									<input type="submit" value="Odeslat" class="contact-submit">
+								</div>
+							</td>
+						</tr>
+					</table>
 				</form>
 			</div>	
 		</main>
