--- a/about/index.html
+++ b/about/index.html
@@ -31,20 +31,16 @@
 			<ul>
 				<li class="logo"><a href="#"><img src="./res/logo.png"></a></li>
 				<li class="button" style="--local_dropdown_menu_top: 1;">
-					<a href="./last_minute.html">
+					<a href="./last-minute/">
 						<span>L</span><img src="./res/clock.png" style="padding: 2px"
 						                   width="25px"><span>ST MINUTE</span>
 					</a>
 				</li>
 				<li class="button" style="--local_dropdown_menu_top: 2;">
-					<a href="./catalog.html"><span>ZÁJEZDY</span></a>
+					<a href="./info/"><span>INF</span><img src="./res/beach-ball.png" style="padding: 2px" width="25px"><span>RMACE</span></a>
 				</li>
-				<li class="button" style="--local_dropdown_menu_top: 3;">
-					<a href="./informations.html"><span>INF</span><img src="./res/beach-ball.png" style="padding: 2px"
-					                                                   width="25px"><span>RMACE</span></a>
-				</li>
-				<li class="button active" style="--local_dropdown_menu_top: 4;">
-					<a href="./about/index.html"><span>O NÁS</span></a>
+				<li class="button active" style="--local_dropdown_menu_top: 3;">
+					<a href="./about/"><span>O NÁS</span></a>
 				</li>
 				<li class="button-call">
 					<a href="tel:+420 666 666 666"><img src="./res/phone.png"><span>+420 666 666 666</span></a>
@@ -223,12 +219,10 @@ V Polsku vás čeká mnoho aktivit, které si můžete užít, jako například 
 				<h3 class="copyright"><span>&copy; 2023, cestovní kancelář Baltic Travel s.r.o.</span></h3>
 			</div>
 		</footer>
-		<a class="quick-chat" href="#"><img src="./res/live-chat.png"/></a>
-		<script src="./scripts/loadingScreen.js"></script>
 		<script src="./scripts/darkThemeCookies.js"></script>
 		<script src="./scripts/dropdownmenu.js"></script>
 		<script>
-			hidePageLoader();
+			document.querySelectorAll(".pageLoader")[0].style.display = "none";
 		</script>
 	</body>
 </html>
